--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -30,6 +30,12 @@ header {
 			}
 		}
 	}
+
+	.fa-bars {
+		color: #333;
+		font-size: 20px;
+		display: none;
+	}
 }
 
 header.main {
@@ -44,5 +50,19 @@ header.main {
 	}
 	#gnb li a {
 		color: #fff;
+	}
+	.fa-bars {
+		color: #fff;
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	header {
+		#gnb {
+			display: none;
+		}
+		.fa-bars {
+			display: block;
+		}
 	}
 }
