모션중 재이벤트 방지와 더불어 활성화 버튼 재이벤트 방지

--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -1,4 +1,18 @@
 .Gallery {
+	button {
+		border: none;
+		background: transparent;
+		border: 1px solid #777;
+		padding: 5px 15px;
+		margin-right: 20px;
+		cursor: pointer;
+		transition: 0.5s;
+
+		&.on {
+			background: #555;
+			color: #fff;
+		}
+	}
 	.frame {
 		opacity: 0;
 		transform: translateY(200px);
